Fix comment so that overly long horizontal words do not break them.

--- a/css/AdminLTE.css
+++ b/css/AdminLTE.css
@@ -2815,3 +2815,10 @@ Component: timeline
     display: none!important;
   }
 }
+
+.comment-body {
+    font-weight: normal;
+    width: 100%;
+    overflow: auto;
+    margin-bottom: 0px;
+}
